# kuroe

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
example/: checker.cpp  validator.cpp
example/generators/: example.3.cpp
example/solver/: correct.cpp  wrong.cpp
example/validator/: validator.cpp
src/: generate.rs  judge.rs  language.rs  main.rs  solve.rs  utils.rs  validate.rs
