[package]
name = "kuroe"
version = "0.1.0"
edition = "2021"
authors = ["polylogK"]
description = "kuroe is a lightweight CLI tool for creating competitive programming problems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/polylogK/kuroe"
readme = "README.md"
keywords = ["competitive", "cli"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.9"
log = "0.4.22"
regex = "1.11.1"
tabled = "0.17.0"
tempfile = "3.14.0"
wait-timeout = "0.2.0"
